--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "node": "18.x"
   },
   "dependencies": {
-    "rimraf": "^5.0.5"
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^5.0.5",
+    "sqlite3": "^5.1.6",
+    "typeorm": "^0.3.17"
   },
   "repository": {
     "type": "git",
