--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^8.53.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
     "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "typescript": "^5.2.2"
