--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node": "18.x"
   },
   "dependencies": {
+    "csv-parser": "^3.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.5",
     "sqlite3": "^5.1.6",
