--- a/package.json
+++ b/package.json
@@ -2,17 +2,23 @@
   "name": "movies",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node dist/src",
-    "build": "rimraf dist && tsc -p tsconfig-build.json",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "start": "node dist/server.js",
+    "start:dev": "tsx watch src/server.ts",
+    "build": "rimraf dist && tsup src",
+    "typeorm": "typeorm-ts-node-esm",
+    "typeorm:run-migrations": "npm run typeorm migration:run -- -d ormconfig.ts",
+    "typeorm:create-migration": "npm run typeorm -- migration:create src/database/migrations/$npm_config_name",
+    "typeorm:revert-migration": "npm run typeorm -- -d ormconfig.ts migration:revert"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.9.0",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "eslint": "^8.53.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
@@ -20,6 +26,8 @@
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
+    "tsup": "^7.2.0",
+    "tsx": "^4.1.0",
     "typescript": "^5.2.2"
   },
   "engines": {
@@ -27,10 +35,12 @@
   },
   "dependencies": {
     "csv-parser": "^3.0.0",
+    "express": "^4.18.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.5",
     "sqlite3": "^5.1.6",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "uuid": "^9.0.1"
   },
   "repository": {
     "type": "git",
