--- a/package.json
+++ b/package.json
@@ -4,20 +4,23 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node dist/server.js",
-    "start:dev": "tsx watch src/server.ts",
+    "start": "NODE_ENV=api npm run typeorm:run-migrations && NODE_ENV=api node dist/main/server.js",
     "build": "rimraf dist && tsup src",
+    "test": "jest --passWithNoTests --no-cache --runInBand",
     "typeorm": "typeorm-ts-node-esm",
+    "typeorm:create-migration": "npm run typeorm -- migration:create database/migrations/$npm_config_name",
     "typeorm:run-migrations": "npm run typeorm migration:run -- -d ormconfig.ts",
-    "typeorm:create-migration": "npm run typeorm -- migration:create src/database/migrations/$npm_config_name",
-    "typeorm:revert-migration": "npm run typeorm -- -d ormconfig.ts migration:revert"
+    "start:dev": "NODE_ENV=api npm run typeorm:run-migrations && NODE_ENV=api tsx watch src/main/server.ts",
+    "test:integration": "NODE_ENV=test npm run typeorm:run-migrations && NODE_ENV=test npm t -- --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.8",
     "@types/node": "^20.9.0",
+    "@types/supertest": "^2.0.16",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
@@ -27,6 +30,9 @@
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "tsup": "^7.2.0",
     "tsx": "^4.1.0",
     "typescript": "^5.2.2"
@@ -36,6 +42,7 @@
   },
   "dependencies": {
     "csv-parser": "^3.0.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.5",
