--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "NODE_ENV=api npm run typeorm:run-migrations && NODE_ENV=api node dist/main/server.js",
     "build": "rimraf dist && tsup src",
+    "start": "NODE_ENV=prod npm run typeorm:run-migrations && NODE_ENV=prod node dist/main/server.js",
     "test": "jest --passWithNoTests --no-cache --runInBand",
-    "typeorm": "typeorm-ts-node-esm",
-    "typeorm:create-migration": "npm run typeorm -- migration:create database/migrations/$npm_config_name",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "typeorm:create-migration": "npm run typeorm -- migration:create src/infra/database/migrations/$npm_config_name",
     "typeorm:run-migrations": "npm run typeorm migration:run -- -d ormconfig.ts",
     "start:dev": "NODE_ENV=api npm run typeorm:run-migrations && NODE_ENV=api tsx watch src/main/server.ts",
     "test:integration": "NODE_ENV=test npm run typeorm:run-migrations && NODE_ENV=test npm t -- --watch"
@@ -33,6 +33,7 @@
     "jest": "^29.7.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "tsup": "^7.2.0",
     "tsx": "^4.1.0",
     "typescript": "^5.2.2"
@@ -43,7 +44,7 @@
   "dependencies": {
     "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "5.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.5",
     "sqlite3": "^5.1.6",
